--- a/Ejercicio_01.html
+++ b/Ejercicio_01.html
@@ -1,19 +1,19 @@
 <canvas id='canvas' width=800 height=600>
 <script>
-function triangle(x1, y1, x2, y2, x3, y3, colorBorde, colorRelleno){
+function triangle(x1, y1, x2, y2, x3, y3, colorBorde, colorRelleno) {
   ctx.beginPath()
   ctx.strokeStyle = colorBorde;
   ctx.fillStyle = colorRelleno;
   ctx.moveTo(x1,y1);
   ctx.lineTo(x2,y2)
   ctx.lineTo(x3,y3)
-  ctx.closPath()
+  ctx.closePath()
   ctx.stroke()
   ctx.fill();
 }
 
   var canvas = document.getElementById('canvas')
-  var ctx = canvas.getContext('2d')
+  var ctx = canvas.getContext('2d');
 
   ctx.strokeStyle = '#00FF00';
   ctx.strokeRect(0,0,canvas.width, canvas.height) 
@@ -21,14 +21,6 @@ function triangle(x1, y1, x2, y2, x3, y3, colorBorde, colorRelleno){
   ctx.strokeRect(0,0,100,100)
   ctx.strokeRect(110, 10, 100, 100);
 
-triangle(20, 20, 45, 67, 40, 200, 'cyan', 'red')
+  triangle(20, 20, 45, 67, 40, 200, 'cyan', 'red')
 
-  ctx.fillRect(0,0,100,100)
-  ctx.rect(110, 10, 100, 100);
-  ctx.beginPath()}
-  ctx.moveTo(120,120);
-  ctx.moveTo(180,180)
-  ctx.lineTo(120,150)
-  ctx.closePath()
-  ctx.stroke();
 </script>
